Fixed minor spacing bug

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -52,7 +52,7 @@ hr {
 }
 
 
-.TA_certificateOfExcellence {
+.trip {
   position: absolute;
   top: 30%;  /* position the top  edge of the element at the middle of the parent */
   left: 50%; /* position the left edge of the element at the middle of the parent */
